@@ -1,38 +1,27 @@
 package io.yanmastra.authentication.logging;
 
-import io.vertx.ext.web.RoutingContext;
+import io.quarkus.arc.Arc;
+import io.quarkus.arc.InstanceHandle;
 import io.yanmastra.authentication.service.SecurityLifeCycleService;
-import jakarta.enterprise.inject.Instance;
-import jakarta.inject.Inject;
-import jakarta.inject.Singleton;
 import jakarta.ws.rs.container.ContainerRequestContext;
-import jakarta.ws.rs.container.ContainerResponseContext;
-import jakarta.ws.rs.container.ContainerResponseFilter;
+import jakarta.ws.rs.container.ContainerRequestFilter;
 import jakarta.ws.rs.container.PreMatching;
 import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.jboss.logging.Logger;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
-import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Stream;
 
 @PreMatching
-@Singleton
-public class LoggingRequestFilter implements ContainerResponseFilter {
-
-    private static final Log log = LogFactory.getLog(LoggingRequestFilter.class);
-    @Inject
-    Logger logger;
-    @Inject RoutingContext routingContext;
-    @Inject
-    Instance<SecurityLifeCycleService> securityLifeCycleServiceInstance;
-    private final ExecutorService executorService = Executors.newFixedThreadPool(2);
+public class LoggingRequestFilter implements ContainerRequestFilter {
+    private static final Logger log = Logger.getLogger(LoggingRequestFilter.class);
+    private static final ExecutorService virtualExecService = Executors.newVirtualThreadPerTaskExecutor();
 
     private String getIP(ContainerRequestContext containerRequestContext) {
         String realIp = containerRequestContext.getHeaderString("X-Real-IP");
@@ -45,7 +34,7 @@ public class LoggingRequestFilter implements ContainerResponseFilter {
             return forwardedFor;
         }
 
-        String hostAddress = routingContext.request().remoteAddress().hostAddress();
+        String hostAddress = containerRequestContext.getHeaderString("X-Forwarded-Host");
         if (StringUtils.isNotBlank(hostAddress)) {
             return hostAddress;
         }
@@ -53,27 +42,27 @@ public class LoggingRequestFilter implements ContainerResponseFilter {
     }
 
     private SecurityLifeCycleService getRequestLoggingListener() {
-        try (Stream<SecurityLifeCycleService> errorMapperStream = securityLifeCycleServiceInstance.stream()) {
-            return errorMapperStream.findFirst().orElse(null);
+        try (InstanceHandle<SecurityLifeCycleService> errorMapperStream = Arc.container().beanInstanceSupplier(SecurityLifeCycleService.class).get()) {
+            return errorMapperStream.orElse(null);
         } catch (Exception e) {
-            logger.warn(e.getMessage());
+            log.warn(e.getMessage());
         }
         return null;
     }
 
     @Override
-    public void filter(ContainerRequestContext containerRequestContext, ContainerResponseContext containerResponseContext) throws IOException {
-        Optional<SecurityLifeCycleService> opsSecLifeCycleService = securityLifeCycleServiceInstance.stream().findFirst();
-        if (opsSecLifeCycleService.isPresent() && opsSecLifeCycleService.get().isSkipLogging(routingContext.request().path())) {
+    public void filter(ContainerRequestContext containerRequestContext) throws IOException {
+        SecurityLifeCycleService requestLoggingListener = getRequestLoggingListener();
+        if (requestLoggingListener != null && requestLoggingListener.isSkipLogging(containerRequestContext.getUriInfo().getPath())) {
             return;
         }
 
-        RequestLogData data = new RequestLogData();
+        io.yanmastra.quarkusBase.RequestLogData data = new io.yanmastra.quarkusBase.RequestLogData();
         data.timestamp = ZonedDateTime.now();
         data.method = containerRequestContext.getMethod();
         data.ipAddress = getIP(containerRequestContext);
         data.uri = containerRequestContext.getUriInfo().getPath();
-        data.status = containerResponseContext.getStatus();
+//        data.status = containerResponseContext.getStatus();
         data.userAgent = containerRequestContext.getHeaderString(HttpHeaders.USER_AGENT);
 
         if (containerRequestContext.getSecurityContext().getUserPrincipal() != null) {
@@ -82,13 +71,26 @@ public class LoggingRequestFilter implements ContainerResponseFilter {
             data.principalName = "Unauthenticated";
         }
 
-        logger.info(data.ipAddress + "--> " + data.method + " " + data.uri + ", by:" +
+        log.info(data.ipAddress + "--> " + data.method + " " + data.uri + ", by:" +
                 data.principalName + " <-- " + data.status +
                 ", Agent:" + data.userAgent);
 
+        if (MediaType.APPLICATION_JSON_TYPE.isCompatible(containerRequestContext.getMediaType()) ||
+                MediaType.TEXT_PLAIN_TYPE.isCompatible(containerRequestContext.getMediaType()) ||
+                MediaType.APPLICATION_FORM_URLENCODED_TYPE.isCompatible(containerRequestContext.getMediaType())) {
+            try {
+                String body = new String(containerRequestContext.getEntityStream().readAllBytes(), StandardCharsets.UTF_8);
+                containerRequestContext.setEntityStream(new ByteArrayInputStream(body.getBytes(StandardCharsets.UTF_8)));
+                data.requestPayload = body;
+                log.info("body: " + body);
+            } catch (Exception e) {
+                log.error(e.getMessage(), e);
+            }
+        }
+
         SecurityLifeCycleService loggingListener = getRequestLoggingListener();
         if (loggingListener != null) {
-            executorService.submit(() -> loggingListener.onLogging(data));
+            virtualExecService.submit(() -> loggingListener.onLogging(data));
         }
     }
 }
